--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,4 +1,4 @@
-<div class = "row">
+<div class = "container">
     <div class="col-md-6">
         <h2>
             Your Designs
@@ -7,16 +7,19 @@
     <div class="col-md-3">
     </div>
     <div class="col-md-3">
-        <a style="margin-top:20px" class="btn btn-default pull-right" ui-sref="newdesign">New Design</a>
+        <a  style="margin-top:20px" class="btn btn-default pull-right" ui-sref="newdesign">Start New Design</a>
     </div>
 
 </div>
 <div class="container">
-    <table class="table table-hover table-condensed table-striped table-bordered">
+    <table class="table table-condensed table-striped table-bordered table-hover table-responsive">
         <tbody>
         <tr  ng-repeat="design in designs | filter:design.dellEmc.saEmail = auth.profile.email" style="cursor:pointer">
             <td>
                 <a ui-sref="designDetail({designId: design._id})">{{ design.customer.accnt }} :: {{ design.createDate| date:'yyyy-MM-dd' }}</a>
+            </td>
+            <td>
+                <a ui-sref="/"><button  class="btn btn-danger pull-right" ng-click="deleteDesign(design._id)">Delete</button></a>
             </td>
         </tr>
         </tbody>
